force-app/main/default/objects/Invitation_Response__c/fields/Number_of_Additional_Guests__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Additional_Guests__c</fullName>
    <label>Number of Additional Guests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>