force-app/main/default/objects/Invitation_Response__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <label>Response</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Joyfully Accept</fullName>
            </value>
            <value>
                <fullName>Regretfully Decline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>